// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders a CheckboxBase in error 1`] = `
<div>
  <span
    aria-disabled="false"
    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-17 MuiCheckbox-root AbstractSwitchBase-error-root-15 AbstractSwitchBase-error-root-16 MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
    data-id="checkboxInput"
  >
    <span
      class="MuiIconButton-label"
    >
      <input
        class="PrivateSwitchBase-input-20"
        data-indeterminate="false"
        id="checkboxInput"
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root svg-icon-inherit-small-svg-icon-21"
        data-id="IconCheckBoxOutlineBlankSharp"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m2-2H3v18h18V3z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </span>
</div>
`;

exports[`it renders a checked CheckboxBase 1`] = `
<div>
  <span
    aria-disabled="false"
    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-10 MuiCheckbox-root AbstractSwitchBase-root-8 AbstractSwitchBase-root-9 MuiCheckbox-colorSecondary PrivateSwitchBase-checked-11 Mui-checked MuiIconButton-colorSecondary"
    data-id="checkboxInput"
  >
    <span
      class="MuiIconButton-label"
    >
      <input
        checked=""
        class="PrivateSwitchBase-input-13"
        data-indeterminate="false"
        id="checkboxInput"
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root svg-icon-inherit-small-svg-icon-14"
        data-id="IconCheckBoxSharp"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M21 3H3v18h18V3zM10 17l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </span>
</div>
`;

exports[`it renders a disabled CheckboxBase 1`] = `
<div>
  <span
    aria-disabled="true"
    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-24 MuiCheckbox-root AbstractSwitchBase-root-22 AbstractSwitchBase-root-23 MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-26 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
    data-id="checkboxInput"
    tabindex="-1"
  >
    <span
      class="MuiIconButton-label"
    >
      <input
        class="PrivateSwitchBase-input-27"
        data-indeterminate="false"
        disabled=""
        id="checkboxInput"
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root svg-icon-inherit-small-svg-icon-28"
        data-id="IconCheckBoxOutlineBlankSharp"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m2-2H3v18h18V3z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`it renders an unchecked CheckboxBase 1`] = `
<div>
  <span
    aria-disabled="false"
    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-3 MuiCheckbox-root AbstractSwitchBase-root-1 AbstractSwitchBase-root-2 MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
    data-id="checkboxInput"
  >
    <span
      class="MuiIconButton-label"
    >
      <input
        class="PrivateSwitchBase-input-6"
        data-indeterminate="false"
        id="checkboxInput"
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root svg-icon-inherit-small-svg-icon-7"
        data-id="IconCheckBoxOutlineBlankSharp"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m2-2H3v18h18V3z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </span>
</div>
`;
